# cpp-raytracing

./: .gitignore  .gitmodules  AsphericSurface.cpp  AsphericSurface.h  CMakeLists.txt  DataPlot.cpp  DataPlot.h  OpticalRay.cpp  OpticalRay.h  OpticalSystem.cpp  OpticalSystem.h  README.md  cpp_features.md  main.cpp  plot_helper.cpp  plot_helper.h
examples/: single_biconcave_lens.yaml  single_biconvex_lens.yaml
tests/: lens_config.yaml  test_aspheric_surface.cpp  test_newton.cpp  test_plplot.cpp  test_plplot_helper.cpp  test_plplot_unique_ptr.cpp  test_yaml.cpp
